<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="135dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_container"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/post_id"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:text="@string/post_id"
                        android:textColor="@android:color/black" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/post_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="46dp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="@string/name_placeholder"
                        android:textAppearance="?attr/title"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/e_mail_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="@string/e_mail_placeholder"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/post_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/body_placeholder"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_container" />

            <TextView
                android:id="@+id/id"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/id"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>