<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/album_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/title_text"
                android:textAppearance="?attr/title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/album_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginEnd="4dp"
                android:gravity="top"
                android:text="@string/album_id"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/photo_id"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/photo_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="bottom"
                android:text="@string/photo_id"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>